--- a/src/app/admin/products/product-list/product-list.component.html
+++ b/src/app/admin/products/product-list/product-list.component.html
@@ -7,8 +7,6 @@
         </mat-form-field>
     </form>
 </div>
-
-
 <div class="item_table_outer mt-10">
     <div class="table-responsive">
         <table class="table account_table" matSort>
@@ -51,6 +49,6 @@
                 </ng-container>
             </tbody>
         </table>
-        <mat-paginator  [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10" (page)="getAllProducts($event.pageIndex+1)"></mat-paginator>
+        <mat-paginator  [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10"></mat-paginator>
     </div>
 </div>
