--- a/src/app/admin/account-management/account-master/inventory-manager/inventory-manager.component.html
+++ b/src/app/admin/account-management/account-master/inventory-manager/inventory-manager.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row"  [hidden]="userData?.value != 'Super Admin'">
     <div class="col">
         <mat-form-field appearance="fill">
             <mat-label>Company</mat-label>
