--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
                 <mat-icon>fact_check</mat-icon> <span class="d-inline-block ml-3">Orders</span>
             </a>
         </li>
-        <li routerLinkActive="active">
+        <li routerLinkActive="active" *ngIf=" this._serv.getPermission('products', 'read')">
             <a href="javascript:;" routerLink="/admin/products" matRipple [matRippleUnbounded]="false">
                 <mat-icon>add_box</mat-icon> <span class="d-inline-block ml-3">Products</span>
             </a>
@@ -21,45 +21,45 @@
                 <mat-icon>view_module</mat-icon> <span class="d-inline-block ml-3">Tables</span>
             </a>
         </li>
-        <li routerLinkActive="active">
+        <li routerLinkActive="active" *ngIf=" this._serv.getPermission('order-report', 'full')">
             <a href="javascript:;" routerLink="/admin/reports" matRipple [matRippleUnbounded]="false">
                 <mat-icon>pie_chart</mat-icon> <span class="d-inline-block ml-3"> Reports</span>
             </a>
         </li>
-        <li routerLinkActive="active">
+        <li routerLinkActive="active" *ngIf=" this._serv.getPermission('users', 'read')">
             <a href="javascript:;" routerLink="/admin/user" matRipple [matRippleUnbounded]="false">
                 <mat-icon>person</mat-icon> <span class="d-inline-block ml-3">Users</span>
             </a>
         </li>
-        <li routerLinkActive="subOpen" class="have_submenu">
+        <li routerLinkActive="subOpen" class="have_submenu" *ngIf=" this._serv.getPermission('setting-menu', 'read')">
             <a href="javascript:;" routerLink="/admin/settings" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
                 <mat-icon>settings</mat-icon> <span class="d-inline-block ml-3">Setting </span>
                 <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon>
             </a>
             <ul routerLinkActive="active" class="list-unlisted submenu-Wrapper">
-                <li routerLinkActive="active">
+                <li routerLinkActive="active" *ngIf=" this._serv.getPermission('company', 'read')">
                     <a href="javascript:;" routerLink="/admin/settings/company" matRipple>
                         Company
                     </a>
                 </li>
-                <li routerLinkActive="active">
+                <li routerLinkActive="active" *ngIf=" this._serv.getPermission('branch', 'read')">
                     <a href="javascript:;" routerLink="/admin/settings/branches" matRipple>
                         Branches
                     </a>
                 </li>
-                <li routerLinkActive="active">
+                <li routerLinkActive="active" *ngIf=" this._serv.getPermission('category-master', 'read')">
                     <a href="javascript:;" routerLink="/admin/settings/categories" matRipple>
                         Categories
                     </a>
                 </li>
-                <li routerLinkActive="active">
+                <li routerLinkActive="active" *ngIf=" this._serv.getPermission('table-master', 'read')">
                     <a href="javascript:;" routerLink="/admin/settings/table-manager" matRipple>
                         Table Manager
                     </a>
                 </li>
             </ul>
         </li>
-        <li routerLinkActive="subOpen" class="have_submenu">
+        <li routerLinkActive="subOpen" class="have_submenu" *ngIf=" this._serv.getPermission('accounting-menu', 'full')">
             <a href="javascript:;" routerLink="/admin/account-management" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
                 <mat-icon>addchart</mat-icon> <span class="d-inline-block ml-3">Accounts </span>
                 <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon>
@@ -70,22 +70,22 @@
                         Dashboard
                     </a>
                 </li>
-                <li routerLinkActive="active">
+                <li routerLinkActive="active" *ngIf=" this._serv.getPermission('accounting-transaction', 'full')">
                     <a href="javascript:;" routerLink="/admin/account-management/new-transaction" matRipple>
                         New Transaction
                     </a>
                 </li>
-                <li routerLinkActive="active">
+                <li routerLinkActive="active" *ngIf=" this._serv.getPermission('accounting-transaction', 'full')">
                     <a href="javascript:;" routerLink="/admin/account-management/transaction-history" matRipple>
                         Transaction History
                     </a>
                 </li>
-                <li routerLinkActive="active">
+                <li routerLinkActive="active" *ngIf=" this._serv.getPermission('accounting-transaction', 'full')">
                     <a href="javascript:;" routerLink="/admin/account-management/reports" matRipple>
                         Reports
                     </a>
                 </li>
-                <li routerLinkActive="active">
+                <li routerLinkActive="active" *ngIf=" this._serv.getPermission('accounting-masters', 'full')">
                     <a href="javascript:;" routerLink="/admin/account-management/masters" matRipple>
                         Masters
                     </a>
