--- a/src/app/admin/products/components/add-product/add-product.component.html
+++ b/src/app/admin/products/components/add-product/add-product.component.html
@@ -26,19 +26,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-3 col-md-6" >
+                    <div class="col-12 col-lg-3 col-md-6" [hidden]="userData?.value != 'Super Admin'">
                         <mat-form-field appearance="fill" class="w-100 mb-5">
                             <mat-label>Company</mat-label>
-                            <mat-select formControlName="company_id" (selectionChange)="selectChange('company')" required>
+                            <mat-select formControlName="company_id" (selectionChange)="selectChange('company')"  [required]="userData?.value == 'Super Admin'">
                                 <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
                             </mat-select>
                             <mat-error>Company is required</mat-error>
                           </mat-form-field>
                     </div>
-                    <div class="col-12 col-lg-3 col-md-6" *ngIf="userData?.roles == 'Super Admin'">
+                    <div class="col-12 col-lg-3 col-md-6" [hidden]="userData?.value != 'Super Admin' && userData?.value != 'Company Admin' && userData?.value != 'Company Accountant'">
                         <mat-form-field appearance="fill" class="w-100" (selectionChange)="selectChange('branch')" >
                             <mat-label>Branch</mat-label>
-                            <mat-select matNativeControl formControlName="branch_id" [required]="userData?.roles == 'Super Admin'">
+                            <mat-select matNativeControl formControlName="branch_id"  [required]="userData?.value == 'Super Admin' || userData?.value == 'Company Admin' || userData?.value == 'Company Accountant'">
                                 <mat-option *ngFor="let item of branchList;" [value]="item.id">{{ item.branchTitle }}</mat-option>
                             </mat-select>
                         </mat-form-field>
